2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-03-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Build librtems++$(LIB_VARIANT).a

2002-12-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Eliminate *_O_FILES.
	Use install-data-local instead of bsplist_DATA.
	* configure.ac: Require autoconf-2.57/automake-1.7.2.
	Apply 4th arg to AC_INIT to prevent autoconf to corrupt package name.

2002-12-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/Makefile.am: Remove.
	* include/Makefile.am: Remove.
	* Makefile.am: Merge-in src/Makefile.am, include/Makefile.am.
	* configure.ac: Reflect changes above. 
	Unconditionally check for CXX.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/Makefile.am: Add bsplib_DATA. Eliminate LIBNAME. Cosmetical
	changes.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* src/Makefile.am: Remove AUTOMAKE_OPTIONS.

2001-10-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/rtems++/Makefile.am: Remove.
	* include/Makefile.am: Handle subdirs, require automake-1.5.
	* configure.ac: Reflect changes above.
	* Makefile.am: Require automake-1.5.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
