@@ -9,7 +9,7 @@
   
   The license and distribution terms for this file may be found in the
   file LICENSE in this distribution or at
-  http://www.OARcorp.com/rtems/license.html.
+  http://www.rtems.com/license/LICENSE.
 
   ------------------------------------------------------------------------
 
